finished  banunban follounf, banlist created
